syntax = "proto3";


option go_package = "github.com/Anveena/ezLog/ezLogPB";

message LogReq {
    //https://developers.google.com/protocol-buffers/docs/proto3#scalar 大老师没有一种能对应go的int的.操
    int32 level = 1;
    int32 file_line = 2;
    int64 time = 3;
    string file_name = 4;
    string app_name = 5;
    string tag = 6;
    string content = 7;
}
message Empty {}
service EzLogGrpc {
    rpc Log(stream LogReq) returns (Empty) {}
}